--- a/src/main/webapp/WEB-INF/pages/layout/labMain.html
+++ b/src/main/webapp/WEB-INF/pages/layout/labMain.html
@@ -6,6 +6,7 @@
     <link rel="stylesheet" href="../static/asserts/css/bootstrap.min.css">
     <link rel="stylesheet" href="../static/css/common.css">
     <link rel="stylesheet" href="../static/css/labMain.css">
+
 </head>
 <body>
 <div class="labMain_content">
@@ -94,6 +95,7 @@
 </html>
 <script src="../static/asserts/js/jquery-2.2.4.js"></script>
 <script src="../static/asserts/echarts/echarts-3.5.2.js"></script>
+<script src="../static/asserts/js/bootstrap.min.js"></script>
 <script>
     var bodyScale = 1;//原始比例1
     $(document).ready(function (e) {
