--- a/src/main/webapp/static/css/labOprateState.css
+++ b/src/main/webapp/static/css/labOprateState.css
@@ -60,7 +60,7 @@
 	background-size: 100% 100%;
 }
 [class$=-title] h3{
-	position: relative;
+	position: absolute;
 	top: 22%;
 	text-align: center;
 	/*line-height: 1.3em;*/
@@ -101,14 +101,14 @@
 }
 
 [class^=item] .progress {
-	width: 24%;
+	width: 19%;
 	height: .8em;
 	display: inline-block;
-	margin: 0 3%;
+	margin: 0 1%;
 	background-color: #224f64;
 }
 [class$=-body] .progress{
-	height: 0.8em;
+	height: 0.6em;
 }
 .progress-bar{
 	background-color: #6cf;
@@ -132,7 +132,7 @@
 }
 [class$=-body] h4{
 	color: #fff;
-	font-size: 1.3em;
+	font-size: 1.2em;
 	text-align: center;
 	margin-bottom: 6%;
 	margin-top: 3%;
