视频监控和曲线监控样式

--- a/src/main/webapp/WEB-INF/pages/layout/centerLab.html
+++ b/src/main/webapp/WEB-INF/pages/layout/centerLab.html
@@ -590,7 +590,7 @@
             <h3 class="lab_title shishijiance">实时监测</h3>
             <div class="shishi_left">
                 <div class="sheshi_tab">视频监控</div>
-                <div class="sheshi_tab sheshi_tab_active">曲线监控</div>
+                <div class="sheshi_tab sheshi_tab_active sheshi_tab_lines">曲线监控</div>
                 <div class="sheshi_tab_list">
                     <ul id="lab_unit_selected_center">
                        <!--  <li><span></span><a href="#">实验室1</a>
