--- a/src/main/webapp/static/css/index_right.css
+++ b/src/main/webapp/static/css/index_right.css
@@ -113,12 +113,12 @@
 }
 
 .total_center .total_name {
-    top: 35%;
+    top: 32%;
     left: -0.1%;
 }
 
 .total_bottom .total_name {
-    top: 35%;
+    top: 32%;
 }
 
 .total_state .total_center {
@@ -158,7 +158,7 @@
 }
 
 .echarts_title {
-    width: 43%;
+    width: 50%;
     color: white;
     background: url("../img/TotalState/title-border.png") no-repeat;
     background-size: 100% 100%;
@@ -174,9 +174,12 @@
 
 .echarts_title2 {
     margin-top: 4%;
-    width: 33%;
+    width: 45%;
 }
-
+.total_bottom_right .echarts_title2 {
+    margin-top: 4%;
+    width: 36%;
+}
 #myChart1 {
     width: 80%;
     height: 63%;
@@ -796,7 +799,7 @@
     margin: 0 auto;
 }
 .sheshi_top_rihght .renyuan_top .renyuan_top_title>div{
-    width: 36%;
+    width: 40%;
     margin: 0 auto;
     background: url(../img/sheshiState/gznx-bg.png) no-repeat;
     background-size: 100% 100%;
@@ -1407,7 +1410,9 @@
     display: none;
     flex-direction: column;
 }
-
+.shuju_apply .echarts_title2{
+    width: 38%;
+}
 .shuju_apply_top {
     margin-top: 1%;
     flex: 1;
