--- a/src/main/webapp/WEB-INF/pages/layout/centerLab.html
+++ b/src/main/webapp/WEB-INF/pages/layout/centerLab.html
@@ -559,7 +559,6 @@
                 </div><!--center-->
                 <div class="la_bottom">
 
-
                     <div class="la_data_left">
                         <h3>用户满意度</h3>
                         <div class="la_datal_content clearfloat">
@@ -650,7 +649,9 @@
                 </div>
             </div>
             <div class="shishi_right">
-                <iframe src="http://10.130.96.27/doc/page/preview.asp" frameborder="0" width="100%" height="100%"></iframe>
+                <div class="video_box">
+                    <iframe src="http://10.130.96.27/doc/page/preview.asp" frameborder="0" width="100%" height="100%"></iframe>
+                </div>
             </div>
         </div>
 
