--- a/src/main/webapp/WEB-INF/pages/layout/right.html
+++ b/src/main/webapp/WEB-INF/pages/layout/right.html
@@ -1,5 +1,5 @@
 ## layout("ulab.html",{}){
-   <div id="right">
+   <div id="right" style="display: none">
         <!--这里是后面4屏的代码-->
         <div class="tab">
             <ul>
