--- a/src/main/webapp/static/css/centerLab.css
+++ b/src/main/webapp/static/css/centerLab.css
@@ -23,6 +23,8 @@
     height: 97%;
 }
 .shishi_right .video_box{
-	width: 97%;
-    height: 98%;
+	width: 87%;
+    height: 85%;
+    margin-top: 3%;
+    margin-left: 5%;
 }
