--- a/src/main/webapp/WEB-INF/pages/layout/left.html
+++ b/src/main/webapp/WEB-INF/pages/layout/left.html
@@ -169,7 +169,7 @@
                                     </li>
                                     ##}
                                 </ul>
-                                <ul class="line">
+                                <ul class="line current">
                                     ##for(type in productLine){
                                     <li class="active" code="${type.id!}"><a><span class="icon"></span>${type.name!}</a>
                                     </li>
@@ -180,7 +180,7 @@
                         </div>
 
                         <ul class="legend-bottom">
-                        	<li><a href=""><span class="icon"></span>中海博睿</a></li>
+                        	<li><a ><span class="icon"></span>中海博睿</a></li>
                         	 ##for(type in productLine){
                         	 		##if(!typeLP.last){
                         	 			<li class=""><a><span class="icon"></span> ${type.name!}</a></li>
