--- a/src/main/webapp/WEB-INF/pages/layout/tab/tab1.html
+++ b/src/main/webapp/WEB-INF/pages/layout/tab/tab1.html
@@ -1,4 +1,4 @@
-<div class="box total_state selected">
+<div class="box total_state">
     <div class="total_top">
         <div class="total_name">运营状态</div>
         <div class="total_top_1">
