--- a/src/main/webapp/WEB-INF/pages/layout/tab/tab2.html
+++ b/src/main/webapp/WEB-INF/pages/layout/tab/tab2.html
@@ -1,10 +1,10 @@
-<div class="box sheshi_state">
+<div class="box sheshi_state  selected">
     <div class="sheshi_top">
 
         <div class="sheshi_top_left">
             <div class='sheshi_title'>设施状态</div>
             <ul>
-                <li>u
+                <li>
                     <div class="zaixian">
                         <ul>
                             <li>实验室在线率</li>
