--- a/src/main/webapp/WEB-INF/pages/layout/left.html
+++ b/src/main/webapp/WEB-INF/pages/layout/left.html
@@ -12,7 +12,11 @@
             </span>
             <span class="oneBtn">
                 <span class="flat-btnTip">平面</span>
-                <img class="sphere" src="${contextPath!}/static/img/ico/btn_flat_off.png">
+                <img class="flat" src="${contextPath!}/static/img/ico/btn_flat_off.png">
+            </span>
+            <span class="fullScreen">
+                <span class="flat-btnTip">全屏</span>
+                <img class="fullScreen" src="${contextPath!}/static/img/labMain/labOprateState_nextPage_active.png">
             </span>
         </div>
         <div class="switchGroup">
@@ -94,30 +98,15 @@
                 <div class="flat-main">
                     <div class="flat-left">
                         <div class="flat-left-top">
-                            <!--
-                                                        <div class="chartBorder">
-                                                            <h3>产线统计</h3>
-                                                            <h4>实验室总数： <strong id="lab_all_count"> 0 </strong></h4>
-                                                            <ul id="pro_line" style="margin-top:10px;">
-                                                            </ul>
-                                                            <div class="myChart"></div>
-                                                        </div>
-                            -->
                             <div class="chartBorder">
                                 <h3>实验室主要功能分类</h3>
-                                <!--<h4>互联实验室数<strong id="lab_all_count_1">388</strong></h4>-->
                                 <div class="myChart"></div>
                             </div>
                         </div>
                         <div class="flat-left-bottom">
                             <div class="chartBorder">
                                 <h3>产品生命周期全流程测试</h3>
-<!--
-                                <h4>P1:对比试验 P2:新品调试 P3:新品确认<br>
-                                    P4:小批验证 入厂/出厂 P5:年度型检 监督抽测"</h4>
--->
                                 <div class="myChart"></div>
-                                <!--<p><span>P1</span><span>P2</span><span>P3</span><span>P4</span><span>P5</span></p>-->
                                 <div class="added"><span>a：P1对比试验</span>&emsp;<span>b：P2新品调试</span>
                                     <br>
                                     <span>c：P3新品确认</span>&emsp;<span>d,e：P4小批验证 入厂/出厂</span>
@@ -127,8 +116,8 @@
                     </div>
                     <div class="mapArea" style="z-index: 999">
                         <!--平面地图位置-->
+                        <iframe id="iframe" class="iframe map" scrolling="no" frameborder="0" src="/hlht/lab/flatMap"></iframe>
                     </div>
-                    <!--  <div id="maskSphere"></div> -->
                     <div class="flat-right">
                         <div class="flat-right-bottom">
                             <div class="chartBorder">
