--- a/src/main/webapp/static/css/fullScreen_map.css
+++ b/src/main/webapp/static/css/fullScreen_map.css
@@ -11,6 +11,7 @@
 
 #l.fullScreen_map header h1{
     line-height: 1.2em;
+    font-weight: bold;
 }
 #l.fullScreen_map header h1:nth-of-type(2) {
     padding-top: 0;
@@ -69,7 +70,7 @@
     background-image: url(../img/bg_title_full.png);
 }
 #l.fullScreen_map header .mainLogo{
-    background-image: url(../img/logo_haier_wider.png);
+    background-image: url(../img/logo_haier_bold.png);
     width: 3.3%;
     height: 5.5%;
     top: 2.6%;
@@ -107,29 +108,34 @@
     margin: 0 auto;
 }
 #l.fullScreen_map .flat .mapArea iframe {
-    top: 2%;
+    /*top: 2%;*/
 }
 #l.fullScreen_map .sphere .chartBorder h4.noBG {
     margin-top: -11%;
 }
 
 #l.fullScreen_map .flat .mapArea iframe {
+    height: 133%;
     width: 100%;
-    left:55%;
+    left:53%;
 }
 #l.fullScreen_map .flat-footer .legend{
     z-index: 9999;
-    width:28%;
-    height: 63%;
-    top:27%;
+    font-size: .9em;
+    width: 21%;
+    height: 43%;
+    top: 27%;
     background-image: url(../img/nav-border_noBottom.png);
+}
+#l.fullScreen_map .flat-footer .legend .labLine {
+    margin-top: 0;
 }
 #l.fullScreen_map .flat-footer .legend-l,
 #l.fullScreen_map .flat-footer .legend-r {
     height: 80%;
     width: 13%;
-    line-height: 4.9em;
-    top: 18.6%;
+    line-height: 4.0em;
+    top: 17.6%;
     z-index: 10;
 }
 #l.fullScreen_map .legend-l{
