压缩部分图片

--- a/src/main/webapp/WEB-INF/pages/layout/centerLab.html
+++ b/src/main/webapp/WEB-INF/pages/layout/centerLab.html
@@ -53,14 +53,14 @@
       			<div class="labMain_cblt_tone labMain_lunbo">
                 
                      <ul class="clearfloat lbul">
-                    <li><img src="${contextPath!}/static/img/labMain/labmain_01.png"/><span>中海博睿实验室</span></li>
-                    <li><img src="${contextPath!}/static/img/labMain/labmain_02.png"/><span>中海博睿实验室</span></li>
-                   <li><img src="${contextPath!}/static/img/labMain/labmain_01.png"/><span>中海博睿实验室</span></li>
-                     <li><img src="${contextPath!}/static/img/labMain/labmain_02.png"/><span>中海博睿实验室</span></li>
-                      <li><img src="${contextPath!}/static/img/labMain/labmain_01.png"/><span>中海博睿实验室</span></li>
-                     <li><img src="${contextPath!}/static/img/labMain/labmain_02.png"/><span>中海博睿实验室</span></li>
-                      <li><img src="${contextPath!}/static/img/labMain/labmain_01.png"/><span>中海博睿实验室</span></li>
-                     <li><img src="${contextPath!}/static/img/labMain/labmain_02.png"/><span>中海博睿实验室</span></li>
+                    <li><img src="${contextPath!}/static/img/labMain/labmain_01.jpg"/><span>中海博睿实验室</span></li>
+                    <li><img src="${contextPath!}/static/img/labMain/labmain_02.jpg"/><span>中海博睿实验室</span></li>
+                   <li><img src="${contextPath!}/static/img/labMain/labmain_01.jpg"/><span>中海博睿实验室</span></li>
+                     <li><img src="${contextPath!}/static/img/labMain/labmain_02.jpg"/><span>中海博睿实验室</span></li>
+                      <li><img src="${contextPath!}/static/img/labMain/labmain_01.jpg"/><span>中海博睿实验室</span></li>
+                     <li><img src="${contextPath!}/static/img/labMain/labmain_02.jpg"/><span>中海博睿实验室</span></li>
+                      <li><img src="${contextPath!}/static/img/labMain/labmain_01.jpg"/><span>中海博睿实验室</span></li>
+                     <li><img src="${contextPath!}/static/img/labMain/labmain_02.jpg"/><span>中海博睿实验室</span></li>
                     
                     </ul>
               </div>
