完善bug,压缩图片

--- a/src/main/webapp/WEB-INF/pages/layout/centerLab.html
+++ b/src/main/webapp/WEB-INF/pages/layout/centerLab.html
@@ -725,7 +725,8 @@
     $(document).ready(function (e) {
         var pageH;
         var pageW;
-        pageH = $(window).height()-17;
+//        pageH = $(window).height()-17;
+        pageH = $(window).height();
         pageW = pageH * 16 * 4 / (9 * 3);
 
         function pageResize() {
