--- a/src/main/webapp/WEB-INF/pages/layout/right.html
+++ b/src/main/webapp/WEB-INF/pages/layout/right.html
@@ -57,7 +57,7 @@
             //.selected display:flex
             $(".box:eq(" + index + ")").addClass("selected").siblings().removeClass("selected");
         	resetSizeRight();
-        	myChart2.resize();
+//        	myChart2.resize();
         	$('#right .lab').css("display",'block');
         });
         $(".tab-item").eq(0).click(function () {
