--- a/src/main/webapp/WEB-INF/pages/layout/left.html
+++ b/src/main/webapp/WEB-INF/pages/layout/left.html
@@ -188,7 +188,7 @@
 <script src="${contextPath!}/static/js/statistics.js?time=New Date()"></script>
 <script src="${contextPath!}/static/js/main_left.js?time=New Date()"></script>
 <script>
-    var myCharts;
+    var myCharts = [];
     var myChartFlatRT;
     var myChartFlatRT_full;
     var myChartFlatLT;
