增加两个大屏地图页面的最终版本。我在这里，青贝我知道你要找。。。还没看到么。。。

--- a/src/main/webapp/WEB-INF/pages/layout/fullScreen_map.html
+++ b/src/main/webapp/WEB-INF/pages/layout/fullScreen_map.html
@@ -38,7 +38,7 @@
                         <h3>覆盖产品</h3>
                         <h4 class="noBG"><strong>50+</strong>类家电产品</h4>
                         <div class="myChart">
-                            <iframe id="wordCloud" src="${contextPath!}/lab/wordCloud"></iframe>
+                            <iframe id="wordCloud" width="100px" height="100px" src="${contextPath!}/lab/wordCloud"></iframe>
                         </div>
                     </div>
                 </div>
