--- a/src/main/webapp/WEB-INF/pages/layout/ulab.html
+++ b/src/main/webapp/WEB-INF/pages/layout/ulab.html
@@ -6,6 +6,7 @@
 <meta name="renderer" content="webkit">
 <meta charset="UTF-8" name="viewport" content="width=device-width,initial-scale=1.0,user-scalable=no">
 <title> ${title!'U-lab全球互联数据中心'}</title>
+<!--<link rel="shortcut icon" href="img/shortcutIcon.png">-->
 <script> var contextPath = '${contextPath!}';</script>
 <script src="${contextPath!}/static/asserts/js/jquery-2.2.4.js"></script>
 <script>
