--- a/src/main/webapp/static/css/index_left.css
+++ b/src/main/webapp/static/css/index_left.css
@@ -293,6 +293,8 @@
 
 /*平面地图样式*/
 #l .flat iframe{
+    position: relative;
+	left: -3%;
     width:100%;
     height:100%;
     transform: rotateX(30deg);
