--- a/src/main/webapp/static/css/labLine.css
+++ b/src/main/webapp/static/css/labLine.css
@@ -64,11 +64,11 @@
     /*background: url("../img/labMain/border-green.png") no-repeat;*/
     /*background-size: 100% 100%;*/
 /*}*/
-.sheshi_tab_active{
+/* .sheshi_tab_active{
     color: #66ffcc;
     background: url("../img/labMain/border-green.png") no-repeat;
     background-size: 100% 100%;
-}
+} */
 .sheshi_tab_list{
     height:81%;
     width: 61%;
@@ -77,6 +77,7 @@
     margin-top: 3%;
 
 }
+
 .sheshi_tab_list>ul{
     width: 100%;
     height: 100%;
@@ -199,3 +200,4 @@
     margin: 0 auto;
     margin-top: 25%;
 }
+
